# 1inch-fusion-integration

./: .env.example  .gitignore  Cargo.toml  DEPLOY_TESTNET.md  README.md  SETUP.md  TEST_COMMANDS.md  set_kernerl_params.sh
contracts/: Cargo.toml
contracts/ft/: Cargo.toml
contracts/ft/tests/: ft_tests.rs
contracts/ft_eqqbq/: Cargo.toml
contracts/ft_eqqbq/src/: lib.rs
contracts/ft_eqqbq/tests/: ft_tests.rs
scripts/: deploy.rs  deploy_from_keystore.rs  deploy_simple.rs  interact.rs  interact_testnet.rs
src/: lib.rs
tests/: ft_tests.rs
