[package]
name = "ft-project"
version = "0.1.0"
edition = "2021"

[dependencies]
near-api = "0.6.1"
near-crypto = "0.30.3"
near-primitives = "0.30.3"
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4"

[[bin]]
name = "deploy"
path = "scripts/deploy.rs"

[[bin]]
name = "deploy_simple"
path = "scripts/deploy_simple.rs"

[[bin]]
name = "interact"
path = "scripts/interact.rs"
