[package]
name = "fungible-token"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "ft/src/lib.rs"

[[test]]
name = "ft_tests"
path = "ft/tests/ft_tests.rs"

[dependencies]
near-sdk = "5.15.1"
near-contract-standards = "5.15.1"

[dev-dependencies]
near-sdk = { version = "5.15.1", features = ["unit-testing"] }
near-workspaces = { version = "0.20", features = ["unstable"] }
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 