[package]
name = "fungible-token"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.15.1"
near-contract-standards = "5.15.1"

[dev-dependencies]
near-sdk = { version = "5.15.1", features = ["unit-testing"] }
near-workspaces = "0.14"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 